2000-05-29  Anatoly Vorobey  <mellon@pobox.com>

	* elf.c (_bfd_elf_link_hash_table_init): Initialize dynlocal.

2000-05-26  Alan Modra  <alan@linuxcare.com.au>

	* sysdep.h (gettext, dgettext, dcgettext, textdomain,
	bindtextdomain): Replace defines with those from intl/libgettext.h
	to quieten gcc warnings.

2000-05-26  Eli Zaretskii  <eliz@is.elta.co.il>

	* aoutx.h (find_nearest_line): Use IS_ABSOLUTE_PATH.

	* archive.c (normalize, bfd_bsd_truncate_arname,
	bfd_gnu_truncate_arname) [HAVE_DOS_BASED_FILE_SYSTEM]: Support
	file names with backslashes.

	* cache.c (bfd_open_file) [__MSDOS__]: Don't unlink the file
	before opening it.

	* sysdep.h: Include filenames.h.

2000-05-26  Alan Modra  <alan@linuxcare.com.au>

	* opncls.c (bfd_close_all_done): Mask file perms with 0777 not 0x777.

2000-05-23  Philip Blundell  <pb@futuretv.com>

	* configure.in: Set version to 2.10.
	* configure: Regenerate.

Sat Jul  3 10:35:19 CDT 1999 Joel Sherrill <joel@OARcorp.com>

	* config.bfd (sparc-rtemself): Added.
	(sparc-rtemsaout): Added as alternate name for current sparc-rtems.
	(sparc-rtems): Switched to ELF from a.out
	(i386-rtemscoff): Added as alternate name for current i386-rtems.
	(i386-rtems): Switched to ELF.

2000-05-09  Alan Modra  <alan@linuxcare.com.au>

	* elf.c (bfd_section_from_shdr): Don't set use_rela_p if rela
	section is empty.
	(copy_private_bfd_data): Allow for space possibly taken up by elf
	headers when calculating segment physical address from lma.

2000-05-08  Alan Modra  <alan@linuxcare.com.au>

	* versados.c (versados_scan): Init stringlen and pass_2_done.

	* trad-core.c (trad_unix_core_file_p): Return
	bfd_error_wrong_format rather than bfd_error_file_truncated.

	* peigen.c (_bfd_pei_swap_aouthdr_out): Pass ImageBase to
	add_data_entry.  DataDirectory virtual address is relative.
	(pe_print_idata): Account for relative DataDirectory virtual
	addresses.  Don't trash datasize inside POWERPC_LE_PE code.
	(pe_print_edata): Similarly.
